Maint: fix layout bug

--- a/staticfiles/property/css/property.css
+++ b/staticfiles/property/css/property.css
@@ -6,14 +6,67 @@
     color: red;
 }
 
-.bold { 
-    font-weight: bold !important;
+.custom-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    overflow: hidden; /* Ensure content does not overflow the card */
 }
 
-.h-100 { 
-    max-height: 330px;
+.image-container {
+    position: relative;
+    width: 100%;
+    padding-top: 75%; /* 4:3 Aspect Ratio */
+    overflow: hidden;
 }
 
-.w-100 {
-    max-width: 535px;
+.custom-image {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-body {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    overflow: hidden; /* Ensure content does not overflow the card body */
+    padding: 1rem; /* Add padding to the card body */
+    flex-grow: 1; /* Ensure the card body grows to fill the remaining space */
+}
+
+.card-title {
+    word-wrap: break-word; /* Ensure long words break to the next line */
+    overflow: hidden; /* Ensure content does not overflow */
+    text-overflow: ellipsis; /* Add ellipsis for overflowed text */
+    white-space: nowrap; /* Prevent text from wrapping to the next line */
+}
+
+.card-text {
+    word-wrap: break-word; /* Ensure long words break to the next line */
+    overflow: hidden; /* Ensure content does not overflow */
+    text-overflow: ellipsis; /* Add ellipsis for overflowed text */
+    white-space: nowrap; /* Prevent text from wrapping to the next line */
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 1rem;
+}
+
+@media (min-width: 768px) {
+    .grid-container {
+        grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    }
+}
+
+@media (max-width: 767.98px) {
+    .grid-container {
+        grid-template-columns: repeat(auto-fill, minmax(100%, 1fr));
+    }
 }
